add footer and links

--- a/index.html
+++ b/index.html
@@ -166,28 +166,26 @@
       </div>
     </main>
     <footer class="footer">
-      <div class="footer__logo-container">
-        <!-- <img
-          class="footer__logo"
-          src="img/oldLogo/newLogo.png"
-          alt="Logo of Bad Frame Games."
-        /> -->
-      </div>
+      <img
+        class="footer__logo"
+        src="img/oldLogo/newLogo.png"
+        alt="Logo of Bad Frame Games."
+      />
       <ul class="footer__nav">
-        <li class="footer__nav-item">ABOUT US</li>
-        <li class="footer__nav-item">GAMES</li>
-        <li class="footer__nav-item">CAREERS</li>
-        <li class="footer__nav-item">NEWS</li>
-        <li class="footer__nav-item">CONTACT US</li>
+        <li>ABOUT US</li>
+        <li>GAMES</li>
+        <li>CAREERS</li>
+        <li>NEWS</li>
+        <li>CONTACT US</li>
       </ul>
-      <div class="footer__text-container">
-        <p class="footer__text">
-          &copy; BAD FRAME GAMES Ltd. ALL RIGHTS RESERVED
-        </p>
-        <p class="footer__links">
-          &copy; BAD FRAME GAMES Ltd. ALL RIGHTS RESERVED
-        </p>
-      </div>
+      <p class="footer__text">
+        &copy; BAD FRAME GAMES all rights reserved - Made By Petr Raisigl
+      </p>
+      <p class="my-links">My Links:</p>
+      <ul class="footer__links">
+        <a href="https://github.com/raisiglPeter"><li>Github</li></a>
+        <a href=""><li>LinkedIn</li></a>
+      </ul>
     </footer>
   </body>
   <script src="./script/script.js"></script>
