--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
       <nav class="header__nav">
         <!-- logo -->
         <div class="header__left">
-          <img src="./img/LOGO.png" class="header__logo" />
+          <a href="index.html">
+            <img src="./img/LOGO.png" class="header__logo" />
+          </a>
         </div>
-        <!-- nav links -->
         <!-- HAMBURGER: -->
         <a class="hamburger">
           <i class="fa-solid fa-bars"> </i>
         </a>
+        <!-- nav links -->
         <ul class="header__right">
           <li>
             <a class="nav__link" aria-label="About us" href="./pages/about.html"
@@ -43,8 +45,8 @@
             <a
               class="nav__link"
               aria-label="Account"
-              href="./pages/account.html"
-              >ACCOUNT</a
+              href="./pages/careers.html"
+              >CAREERS</a
             >
           </li>
           <li>
