started about-section

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../style/style-tablet.css" />
     <link rel="stylesheet" href="../style/style-desktop.css" />
     <link rel="stylesheet" href="../style/style-large.css" />
+    <link rel="stylesheet" href="../style/style-about-us.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 
     <script
@@ -55,11 +56,10 @@
         </ul>
       </nav>
       <div class="header__text-wrapper">
-        <h1 class="header__title">
-          Bad<span class="header__title-accent">Frame</span>
-        </h1>
-        <span class="header__subtitle">Games</span>
-        <p class="header__tagline">WORK, PLAY, GAME.</p>
+        <span class="header__subtitle">About Us</span>
+        <p class="header__tagline">
+          Video game pioneer, innovator and leader for 30+ years
+        </p>
       </div>
       <div id="hamburger-menu" class="hamburger-menu">
         <ul class="hamburger-menu__list">
@@ -79,9 +79,105 @@
         </ul>
       </div>
     </header>
-    <section class="about-section">
-      <h1>ABOUT US</h1>
-    </section>
+    <main class="about-section">
+      <article class="about-article">
+        <div class="article-text">
+          <div class="article-border">
+            <h5 class="text-title text-allcaps">how it started</h5>
+            <h6 class="text-subtitle text-allcaps">
+              CREATING INNOVATIVE GAMES FOR MORE THAN 30 YEARS
+            </h6>
+            <p class="textContent">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+              eaque nobis aspernatur culpa repellendus exercitationem doloremque
+              provident dignissimos modi hic. Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Quisquam eaque nobis aspernatur
+              culpa repellendus exercitationem doloremque provident dignissimos
+              modi hic.
+            </p>
+          </div>
+        </div>
+        <div class="article-img">
+          <img
+            src="../img/about/about-img-1.jpg"
+            alt="Placeholder image of an arcade."
+          />
+        </div>
+      </article>
+      <article class="about-article article-reverse">
+        <div class="article-text">
+          <div class="article-border">
+            <h5 class="text-title text-allcaps">What we're doing</h5>
+            <h6 class="text-subtitle text-allcaps">
+              Ways we innovate the gaming space
+            </h6>
+            <p class="textContent">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam
+              deserunt nam perspiciatis excepturi fuga nostrum necessitatibus
+              tenetur ullam? Earum perspiciatis quae autem odio vel ut dolorum
+              cum excepturi, mollitia assumenda tenetur quod iusto quaerat
+              cupiditate sequi nemo necessitatibus ipsa magnam eius asperiores
+              eos? Odit laboriosam, reprehenderit aspernatur earum maiores
+              temporibus!
+            </p>
+          </div>
+        </div>
+        <div class="article-img">
+          <img
+            src="../img/about/about-img-2.jpg"
+            alt="Article placeholder image."
+          />
+        </div>
+      </article>
+      <article class="about-article">
+        <div class="article-text">
+          <div class="article-border">
+            <h5 class="text-title text-allcaps">How it's going</h5>
+            <h6 class="text-subtitle text-allcaps">
+              The future of free-to-play gaming is with us
+            </h6>
+            <p class="textContent">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
+              consectetur dolorem vel corrupti quos, temporibus veritatis quam
+              repellendus hic corporis, ducimus nobis laborum quod omnis
+              deserunt ea assumenda sunt accusamus blanditiis nihil repudiandae
+              ullam iste non aliquam. Adipisci impedit ullam nobis! Eum vero
+              distinctio facilis, possimus molestias voluptas, praesentium
+              mollitia sint tempora tempore odio nemo ad fugit. Illo, quasi
+              dolorem.
+            </p>
+          </div>
+        </div>
+        <div class="article-img">
+          <img
+            src="../img/about/about-img-3.jpg"
+            alt="Placeholder image of an arcade."
+          />
+        </div>
+      </article>
+    </main>
+    <footer class="footer">
+      <img
+        class="footer__logo"
+        src="../img/oldLogo/newLogo.png"
+        alt="Logo of Bad Frame Games."
+      />
+      <ul class="footer__nav">
+        <li>ABOUT US</li>
+        <li>GAMES</li>
+        <li>CAREERS</li>
+        <li>NEWS</li>
+        <li>CONTACT US</li>
+      </ul>
+      <p class="footer__text">
+        &copy; BAD FRAME GAMES all rights reserved - Made By Petr Raisigl
+      </p>
+      <p class="my-links">My Links:</p>
+      <ul class="footer__links">
+        <a href="https://github.com/raisiglPeter"><li>Github</li></a>
+        <a href=""><li>LinkedIn</li></a>
+      </ul>
+    </footer>
     <script src="../script/script.js"></script>
   </body>
 </html>
